# some_project

./: README.md  pyproject.toml
some_project/scripts/: say_hello.py
